# ferric-event-api

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  TODO  compose.yml  docker-compose.yml
.github/workflows/: ci.yml
.sqlx/: query-17cb0317fe530fdf1051e40a54c54e398273ad613c6e6b036a20a9160651abe0.json  query-64b96dce4a176aeceaf75a7d54cd6bb86cda9ebe99e89f571510aa53f6659183.json  query-96e01d61c97e6571e6688e5f5fd171376c127299c9aa0ce07a05da5341d3d1d4.json  query-cae93b3dbab712ca5109add5ebc29d66a92656d526cb8eb24e4b6cc8b4cc74ad.json  query-d7df4e8a1c1451b4e2fb86e2df596e41437038864999fd93898528d3fb1affc6.json  query-e38de028f6a153a7aefb534a17c7efe8b773f1dd76420f965d4e55136b02a350.json
cli_app/: .env  Cargo.toml
cli_app/sqlx/: docker-compose.yml  schema.sql
cli_app/src/: main.rs  model.rs  settings.rs
cli_app/src/api/: errors.rs  mod.rs  v1.rs
cli_app/src/api/handlers/: hello.rs  mod.rs  posts.rs  users.rs
cli_app/src/api/response/: posts.rs  users.rs
cli_app/src/commands/: hello.rs  serve.rs
cli_app/src/services/: post.rs  user.rs
cli_app/src/state/: mod.rs
cli_app/test/: test_create_user_endpoint.sh  test_forever_endpoint.sh  test_get_user_endpoint.sh
database/init/: 10-schema.sql  20-seed_events.sql
src/: api.rs  lib.rs  main.rs  provider.rs  repository.rs  service.rs  state.rs
src/application/: service.rs
src/application/ports/: provider.rs  repository.rs
src/domain/: event.rs
src/infrastructure/: config.rs  mod.rs
src/infrastructure/adapters/: mod.rs  provider.rs  repository.rs
src/infrastructure/adapters/controller/: api.rs  mod.rs  state.rs
src/infrastructure/adapters/controller/api/: mod.rs  v1.rs
src/infrastructure/adapters/controller/handlers/: mod.rs
src/infrastructure/adapters/provider/: dummy_event_provider_client.rs  http_event_provider_client.rs  mod.rs
src/infrastructure/adapters/repository/: dummy_event_repository.rs  failing_event_repository.rs  in_memory_event_repository.rs  mod.rs  postgres_event_repository.rs
test/: benchmark.yml  run_benchmark.sh  test_endpoints.py
test/fixtures/: provider_response_1.xml  provider_response_2.xml  provider_response_503.json  provider_response_acceptance_test.xml  search_query_params.csv
