[package]
name = "ferric-event-api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "*"
tokio = { version = "*", features = ["full"] }
serde = { version = "*", features = ["derive"] }
serde_json = "*"
anyhow = "1.0.100"
rand = "0.9.2"
chrono = { version = "*", features = ["serde"] }
uuid = { version = "*", features = ["serde", "v4"] }
