[package]
name = "ferric-event-api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "*"
tokio = { version = "*", features = ["full"] }
serde = { version = "*", features = ["derive"] }
serde_json = "*"
serde-xml-rs = "*"
anyhow = "1.0.100"
rand = "0.9.2"
chrono = { version = "*", features = ["serde"] }
uuid = { version = "*", features = ["serde", "v4"] }
reqwest = { version = "*", features = ["json"] }
tracing = { version = "0.1", features = ["log"] }
tracing-log = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tower-http = { version = "*", features = ["trace", "timeout"] }
sqlx = { version = "0.8.6", features = [
    "postgres",
    "runtime-tokio",
    "tls-rustls",
    "chrono",
    "uuid",
    "macros",
] }
config = "0.14"
dotenv = "0.15"
arc-swap = "1.7.1"
log = "*"
