[package]
name = "ferric-event-api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.7"
tokio = { version = "1.48", features = ["full"] }
tower-http = { version = "0.6", features = ["trace", "timeout"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-xml-rs = "0.8"
reqwest = { version = "0.12", features = ["json"] }
anyhow = "1.0"
dotenv = "0.15"
config = "0.15"
arc-swap = "1.7"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.18", features = ["serde", "v4"] }
sqlx = { version = "0.8", features = [
    "postgres",
    "runtime-tokio",
    "tls-rustls",
    "chrono",
    "uuid",
    "macros",
] }
log = "0.4"
tracing = { version = "0.1", features = ["log"] }
tracing-log = { version = "0.2" }
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }

[dev-dependencies]
tower = "0.5"
http-body-util = "0.1"
httpmock = "0.8.2"